Revision history for {{$dist->name}}

{{$NEXT}}
  - added AnyEvent::Finger
  - added HTML::Barcode::QRCode

0.34      2013-01-18 18:24:49 America/New_York
  - rm Mojolicious::Plugin::Gravatar

0.33      2013-01-18 18:16:19 America/New_York
  - added local::lib
  - added Mojolicious::Plugin::Gravatar

0.32      2013-01-15 16:11:32 America/New_York
  - added AnyEvent::Ident

0.31      2012-12-26 14:57:57 America/New_York
  - test all requird modules
  - fix bug where MSWin32 and cygwin not required modules were being excluded

0.30      2012-12-26 14:23:04 America/New_York
  - migration to requirements specified in dist.ini instead of Plicease.pm

0.28      2012-12-26 11:41:59 America/New_York
  - added Template::Tiny
  - added Try::Tiny
  - added HTTP::Tiny
  - added TinyMake
  - added Validate::Tiny
  - added Mojolicious::Plugin::RenderFile
  - added Mojo::JSON::Any
  - added Sereal::Encoder (except for $^O eq 'MSWin32')
  - added Sereal::Decoder

0.28      2012-11-06 10:43:47 EST5EDT
  - added Module::CoreList
  - added Pod::Perldoc
  - added File::IgnoreReadonly
  - added Authen::Simple
  - added Crypt::PasswdMD5
  - added use File::Touch

0.27      2012-11-02 13:59:14 America/New_York
  - sort modules in doco case insensitive
  - added XML::Rabbit
  - added Role::Tiny
  - added Scalar::Does

0.26      2012-10-26 15:37:36 EST5EDT
  - added App::RegexFileUtils
  - added Shell::Config::Generate
  - added Shell::Guess
  - added WebService::TwitterBootstrap::Download::Custom
  - added Test::Differences
  - added DBD::PgPP
  - added DBD::mysqlPP

0.25      2012-10-25 16:50:59 America/New_York
  - rm Rose::Planter because of dep on DBD::Pg
  - rm Test::Strict on cygwin for real
    (not just doco of it)

0.24      2012-10-25 16:28:33 America/New_York
  - rm Test::Strict on cygwin

0.23      2012-10-25 16:25:30 America/New_York
  - rm Data::Downloader on cygwin
  - fixup AnyEvent::Open3::Simple

0.22      2012-10-25 16:18:36 America/New_York