@@ -50,6 +50,8 @@ Devel::StackTrace                              = 0
 Digest::MD5                                    = 0
 File::chdir                                    = 0
 File::IgnoreReadonly                           = 0
+File::Listing                                  = 0
+File::Listing::Ftpcopy                         = 0
 File::Touch                                    = 0
 HTML::Barcode::QRCode                          = 0
 HTTP::Tiny                                     = 0
