@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 81;
+use Test::More tests => 83;
 use_ok 'Task::BeLike::Plicease';
 require_ok 'AnyEvent';
 require_ok 'AnyEvent::Finger';
@@ -35,6 +35,8 @@ require_ok 'Devel::StackTrace';
 require_ok 'Digest::MD5';
 require_ok 'File::chdir';
 require_ok 'File::IgnoreReadonly';
+require_ok 'File::Listing';
+require_ok 'File::Listing::Ftpcopy';
 require_ok 'File::Touch';
 require_ok 'HTML::Barcode::QRCode';
 require_ok 'HTTP::Tiny';
