@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - added File::Listing
+  - added File::Listing::Ftpcopy
   - added AnyEvent::Finger
   - added HTML::Barcode::QRCode
 
